--- a/ex/about.html
+++ b/ex/about.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="about.css">
 </head>
 <body>
+
+  <!-- NAVBAR -->
   <nav class="navbar">
     <div class="logo">
       <img src="logo.jpg" alt="Logo">
@@ -21,6 +23,8 @@
       <li><a href="contact.html">CONTACT</a></li>
     </ul>
   </nav>
+
+  <!-- ABOUT SECTION -->
   <section class="about">
     <div class="about-overlay">
       <h1>About Us</h1>
@@ -34,6 +38,8 @@
         and carry forward the wisdom of the past into the future.
       </p>
     </div>
+
+    <!-- ROTATING IMAGES BACKGROUND -->
     <div class="circle-container">
       <img src="intra.jpeg" alt="Intramuros">
       <img src="vigan.webp" alt="Vigan">
@@ -62,7 +68,7 @@
         </div>
         <p>info@historicalph.com | +63 912 345 6789</p>
         <p>TERMS & CONDITIONS | PRIVACY POLICY</p>
-        <p>This Website is for project purposes only | Designed by Ealyn Mutya</p>
+        <p>© 2025 Historical Places PH | Designed by Ealyn Mutya</p>
     </div>
 </footer>
 
