--- a/ex/contact.html
+++ b/ex/contact.html
@@ -5,10 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us - Historical Places</title>
   <link rel="stylesheet" href="contact.css">
+  <!-- Font Awesome CDN para sa social icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-
+    
+<!-- NAVIGATION -->
 <nav class="navbar">
   <div class="logo">
       <img src="logo.jpg" alt="Logo">
@@ -16,12 +18,14 @@
   <ul>
     <li><a href="home.html">HOME</a></li>
     <li><a href="about.html">ABOUT</a></li>
+    <li><a href="history.html">HISTORY</a></li>
     <li><a href="travel.html">TRAVEL</a></li>
     <li><a href="places.html">PLACES</a></li>
-    <li><a href="gallery.html">GALLERY</a></li>
     <li><a href="contact.html" class="active">CONTACT</a></li>
   </ul>
 </nav>
+
+<!-- BANNER -->
 <div class="banner">
   <img src="contactbanner.jpg" alt="Historical Banner">
   <div class="banner-text">
@@ -29,7 +33,10 @@
     <p>We’d love to hear from you</p>
   </div>
 </div>
+
+<!-- CONTACT SECTION -->
 <section class="contact-section">
+  <!-- FORM -->
   <div class="contact-container">
     <h2>Send us a message</h2>
     <form class="contact-form">
@@ -45,8 +52,11 @@
       <button type="submit">Send</button>
     </form>
   </div>
+
+  <!-- MAP -->
   <div class="map-container">
-    <h2>Travel Location</h2>
+    <h2>Our Location</h2>
+    <!-- Google Maps Embed (pwede mong palitan ng sarili mong location) -->
     <div class="map">
       <iframe 
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3857.702121507568!2d120.9842195153498!3d14.599512989810934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397ca2f7c1f!2sIntramuros%2C%20Manila%2C%20Philippines!5e0!3m2!1sen!2sph!4v1692287200000!5m2!1sen!2sph" 
@@ -56,6 +66,7 @@
   </div>
 </section>
 
+<!-- FOOTER -->
 <footer class="historical-footer">
   <div class="footer-silhouette"></div>
   <div class="footer-content">
@@ -66,9 +77,11 @@
       </div>
       <p>info@historicalph.com | +63 912 345 6789</p>
       <p>TERMS & CONDITIONS | PRIVACY POLICY</p>
-      <p>This Website is for project purposes only | Designed by Ealyn Mutya</p>
+      <p>© 2025 Historical Places PH | Designed by Ealyn Mutya</p>
   </div>
 </footer>
+
+<!-- FLOATING FEATHER ANIMATION -->
 <div class="feather"></div>
 
 </body>
