--- a/ex/gallery.html
+++ b/ex/gallery.html
@@ -23,6 +23,8 @@
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
+
+    <!-- BANNER -->
     <div class="banner">
         <img src="gallery.webp" alt="Historical Gallery Banner">
         <div class="banner-text">
@@ -30,6 +32,8 @@
             <p>A glimpse of heritage and timeless landmarks</p>
         </div>
     </div>
+
+    <!-- GALLERY SECTION -->
     <section class="gallery">
         <div class="gallery-grid">
             <div class="gallery-item">
@@ -72,88 +76,10 @@
                 <img src="mal.jpeg" alt="Malacañang Palace">
                 <p>Malacañang Palace</p>
             </div>
-            <div class="gallery-item">
-                <img src="calle.jpg" alt="Calle Real">
-                <p>Calle Real</p>
-            </div>
-             <div class="gallery-item">
-                <img src="Baclayon Church Ruins.jpg" alt="Baclayon Church Ruins">
-                <p>Baclayon Church Ruins</p>
-            </div>
-            <div class="gallery-item">
-                <img src="Guiuan Church.jpg" alt="Guiuan Church">
-                <p>Guiuan Church</p>
-            </div>
-            <div class="gallery-item">
-                <img src="Lazi Convent.jpg" alt="Lazi Convent">
-                <p>Lazi Convent</p>
-            </div>
-            <div class="gallery-item">
-                <img src="Camiguin Sunken Cemetery.jpg" alt="Camiguin Sunken Cemetery">
-                <p>Camiguin Sunken Cemetery</p>
-            </div>
-            <div class="gallery-item">
-                <img src="Parola ng Capones Island.jpg" alt="Capones Island ">
-                <p>Capones Island </p>
-            </div>
-            <div class="gallery-item">
-                <img src="Cape Bojeador Lighthouse.jpg" alt="Cape Bojeador Lighthouse">
-                <p>Cape Bojeador Lighthouse</p>
-            </div>
-            <div class="gallery-item">
-                <img src="Bangui Windmills Area.jpg" alt="Bangui Windmills Area">
-                <p>Bangui Windmills Area</p>
-            </div>
-            <div class="gallery-item">
-                <img src="Kapurpurawan Rock Formation.jpg" alt="Kapurpurawan Rock Formation">
-                <p>Kapurpurawan Rock Formation </p>
-            </div>
-            <div class="gallery-item">
-                <img src="Silliman University.jpg" alt="Silliman University">
-                <p>Silliman University</p>
-            </div>
-            <div class="gallery-item">
-                <img src="Negros Museum.jpg" alt="Negros Museum">
-                <p>Negros Museum</p>
-            </div>
-            <div class="gallery-item">
-                <img src="Museo Pambata.jpg" alt="Museo Pambata">
-                <p>Museo Pambata</p>
-            </div>
-            <div class="gallery-item">
-                <img src="Cagsawa Ruins.jpg" alt="Cagsawa Ruins">
-                <p>Cagsawa Ruins</p>
-            </div>
-            <div class="gallery-item">
-                <img src="Tabon Caves.jpg" alt="Tabon Caves">
-                <p>Tabon Caves</p>
-            </div>
-            <div class="gallery-item">
-                <img src="Boljoon Church.jpg" alt="Boljoon Church">
-                <p>Boljoon Church</p>
-            </div>
-            <div class="gallery-item">
-                <img src="Enchanted Cave.jpg" alt="Enchanted Cave">
-                <p>Enchanted Cave</p>
-            </div>
-            <div class="gallery-item">
-                <img src="National Museum of Fine Arts.jpg" alt="National Museum of Fine Arts">
-                <p>National Museum of Fine Arts</p>
-            </div>
-            <div class="gallery-item">
-                <img src="National Museum of Anthropology.jpg" alt="National Museum of Anthropology">
-                <p>National Museum of Anthropology</p>
-            </div>
-            <div class="gallery-item">
-                <img src="Sandugo Shrine.jpg" alt="Sandugo Shrine">
-                <p>Sandugo Shrine</p>
-            </div>
-            <div class="gallery-item">
-                <img src="General Emilio Aguinaldo Museum.jpg" alt="General Emilio Aguinaldo Museum">
-                <p>General Emilio Aguinaldo Museum</p>
-            </div>
         </div>
     </section>
+
+    <!-- FOOTER -->
     <footer class="historical-footer">
         <div class="footer-silhouette"></div>
         <div class="footer-content">
@@ -164,7 +90,7 @@
             </div>
             <p>info@historicalph.com | +63 912 345 6789</p>
             <p>TERMS & CONDITIONS | PRIVACY POLICY</p>
-            <p> This Website is for project purposes only | Designed by Ealyn Mutya</p>
+            <p>© 2025 Historical Places PH | Designed by Ealyn Mutya</p>
         </div>
     </footer>
 </body>
