--- a/ex/home.html
+++ b/ex/home.html
@@ -127,7 +127,7 @@ Step back in time and witness the legacy of our ancestors — majestic stone wal
         </div>
         <p>info@historicalph.com | +63 912 345 6789</p>
         <p>TERMS & CONDITIONS | PRIVACY POLICY</p>
-        <p>This Website is for project purposes only | Designed by Ealyn Mutya</p>
+        <p>© 2025 Historical Places PH | Designed by Ealyn Mutya</p>
     </div>
 </footer>
 
