--- a/ex/places.html
+++ b/ex/places.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="places.css">
 </head>
 <body>
+    <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="logo">
             <img src="logo.jpg" alt="Logo"></div>
@@ -20,8 +21,11 @@
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
+
+    <!-- Slider Section -->
     <section class="slider">
         <div class="slides">
+            <!-- Slide 1 -->
             <div class="slide">
                 <img src="intra.jpeg" alt="Intramuros">
                 <div class="description">
@@ -29,6 +33,7 @@
                     <p> <strong> City, Metro Manila</strong></p>
                 </div>
             </div>
+            <!-- Slide 2 -->
             <div class="slide">
                 <img src="vigan.webp" alt="Vigan City">
                 <div class="description">
@@ -36,6 +41,7 @@
                     <p> Ilocos Sur, Northern Luzon</p>
                 </div>
             </div>
+            <!-- Slide 3 -->
             <div class="slide">
                 <img src="banaue.jpeg" alt="Banaue Rice Terraces">
                 <div class="description">
@@ -43,6 +49,7 @@
                     <p>Ifugao Province, Cordillera Region</p>
                 </div>
             </div>
+                <!-- Slide 3-->
             <div class="slide">
                 <img src="st.jpg" alt="San Agustin Church">
                 <div class="description">
@@ -50,6 +57,7 @@
                     <p> Intramuros, Manila City, Metro Manila</p>
                 </div>
             </div>
+             <!-- Slide 3-->
             <div class="slide">
                 <img src="mag.jpeg" alt="Magellan’s Cross ">
                 <div class="description">
@@ -57,6 +65,7 @@
                     <p> Cebu City, Cebu Province</p>
                 </div>
             </div>
+            <!-- Slide 3-->
             <div class="slide">
                 <img src="riza.jpg" alt="Rizal Park (Luneta) ">
                 <div class="description">
@@ -64,6 +73,7 @@
                     <p> Manila City, Metro Manila</p>
                 </div>
             </div>
+            <!-- Slide 3-->
             <div class="slide">
                 <img src="bar.jpeg" alt="Barasoain Church ">
                 <div class="description">
@@ -71,6 +81,7 @@
                     <p>Malolos City, Bulacan Province</p>
                 </div>
             </div>
+            <!-- Slide 3-->
             <div class="slide">
                 <img src="mal.jpeg" alt="Malacañang Palace  ">
                 <div class="description">
@@ -78,6 +89,7 @@
                     <p>  Manila City, Metro Manila/p>
                 </div>
             </div>
+            <!-- Slide 3-->
             <div class="slide">
                 <img src="cor.jpeg" alt="Corregidor Island ">
                 <div class="description">
@@ -85,6 +97,7 @@
                     <p>Cavite Province (entrance via Manila Bay)</p>
                 </div>
             </div>
+            <!-- Slide 3-->
             <div class="slide">
                 <img src="taal.jpeg" alt="Taal Basilica ">
                 <div class="description">
@@ -92,6 +105,7 @@
                     <p>Taal, Batangas Province</p>
                 </div>
             </div>
+            <!-- Slide 3-->
             <div class="slide">
                 <img src="mac.jpeg" alt="Mactan Shrine ">
                 <div class="description">
@@ -99,6 +113,7 @@
                     <p>Lapu-Lapu City, Cebu Province</p>
                 </div>
             </div>
+            <!-- Slide 3-->
             <div class="slide">
                 <img src="monu.jpeg" alt="EDSA People Power Monument  ">
                 <div class="description">
@@ -106,6 +121,7 @@
                     <p>Quezon City, Metro Manila</p>
                 </div>
             </div>
+            <!-- Slide 3-->
             <div class="slide">
                 <img src="under.jpg" alt="Palawan Tabon Caves  ">
                 <div class="description">
@@ -113,6 +129,7 @@
                     <p> Quezon, Palawan Province</p>
                 </div>
             </div>
+            <!-- Slide 3-->
             <div class="slide">
                 <img src="mt.jpg" alt="Mount Samat National Shrine ">
                 <div class="description">
@@ -120,6 +137,7 @@
                     <p>Pilar, Bataan Province</p>
                 </div>
             </div>
+            <!-- Slide 3-->
             <div class="slide">
                 <img src="las.jpg" alt="Las Casas Filipinas de Acuzar ">
                 <div class="description">
@@ -127,6 +145,7 @@
                     <p>Bagac, Bataan Province</p>
                 </div>
             </div>
+            <!-- Slide 3-->
             <div class="slide">
                 <img src="ag.jpg" alt="Aguinaldo Shrine ">
                 <div class="description">
@@ -151,10 +170,11 @@
         </div>
         <p>info@historicalph.com | +63 912 345 6789</p>
         <p>TERMS & CONDITIONS | PRIVACY POLICY</p>
-        <p>This Website is for project purposes only | Designed by Ealyn Mutya</p>
+        <p>© 2025 Historical Places PH | Designed by Ealyn Mutya</p>
     </footer>
 </div>
 <div>
+    <!-- Slider Script -->
     <script>
         let currentSlide = 0;
         const slides = document.querySelectorAll(".slide");
