--- a/ex/travel.html
+++ b/ex/travel.html
@@ -1,168 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Travel Destinations in the Philippines</title>
-  <link rel="stylesheet" href="travel.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Travel Destinations in the Philippines</title>
+    <link rel="stylesheet" href="travel.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
-  <nav class="navbar">
-    <div class="logo">
-      <img src="logo.jpg" alt="History logo">
-    </div>
-    <ul class="nav-links">
-      <li><a href="home.html">HOME</a></li>
-      <li><a href="about.html">ABOUT</a></li>
-      <li><a href="travel.html" class="active">TRAVEL</a></li>
-      <li><a href="places.html">PLACES</a></li>
-      <li><a href="gallery.html">GALLERY</a></li>
-      <li><a href="contact.html">CONTACT</a></li>
-    </ul>
-  </nav>
-  <header>
-    <h1>Historical Travel Destinations</h1>
-    <p>Explore the rich cultural and historical heritage of the Philippines.</p>
-  </header>
-  <div class="slider">
-    <div class="slides">
-      <input type="radio" name="radio-btn" id="radio1">
-      <input type="radio" name="radio-btn" id="radio2">
-      <input type="radio" name="radio-btn" id="radio3">
-      <input type="radio" name="radio-btn" id="radio4">
-      <div class="slide first">
-        <img src="intra.jpeg" alt="Intramuros">
-      </div>
-      <div class="slide">
-        <img src="vigan.webp" alt="Vigan">
-      </div>
-      <div class="slide">
-        <img src="banaue.jpeg" alt="Banaue">
-      </div>
-      <div class="slide">
-        <img src="cor.jpeg" alt="Corregidor">
-      </div>
-      <div class="navigation-auto">
-        <div class="auto-btn1"></div>
-        <div class="auto-btn2"></div>
-        <div class="auto-btn3"></div>
-        <div class="auto-btn4"></div>
-      </div>
-    </div>
-    <div class="navigation-manual">
-      <label for="radio1" class="manual-btn"></label>
-      <label for="radio2" class="manual-btn"></label>
-      <label for="radio3" class="manual-btn"></label>
-      <label for="radio4" class="manual-btn"></label>
-    </div>
-  </div>
-  <section class="travel-grid">
-    <div class="travel-card">
-      <img src="intra.jpeg" alt="Intramuros, Manila">
-      <h2>Intramuros, Manila</h2>
-      <p>Intramuros, known as *The Walled City*, is a historic gem in Manila that offers travelers a unique glimpse into the Philippines’ colonial past. Within its stone walls are centuries-old churches, museums, and landmarks such as Fort Santiago. Visitors can enjoy walking along cobblestone streets, riding a traditional *kalesa*, and tasting local cuisine in charming restaurants.</p>
-    </div>
 
-    <div class="travel-card">
-      <img src="vigan.webp" alt="Vigan City">
-      <h2>Vigan City</h2>
-      <p>A UNESCO World Heritage Site, Vigan City is famous for its preserved Spanish colonial architecture, cobblestone streets, and horse-drawn kalesa rides. It offers a nostalgic journey into the Philippines’ past while allowing visitors to shop for local crafts and enjoy authentic Ilocano cuisine.</p>
-    </div>
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="logo">
+            <img src="logo.jpg" alt="History logo">
+        </div>
+        <ul class="nav-links">
+            <li><a href="home.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="travel.html" class="active">TRAVEL</a></li>
+            <li><a href="places.html">PLACES</a></li>
+            <li><a href="gallery.html">GALLERY</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+            
+        </ul>
+    </nav>
 
-    <div class="travel-card">
-      <img src="riza.jpg" alt="Rizal Park">
-      <h2>Rizal Park (Luneta)</h2>
-      <p>One of Manila’s most iconic landmarks, Rizal Park is dedicated to national hero Dr. José Rizal. Visitors can stroll through landscaped gardens, see historical monuments, and witness the changing of the guards at the Rizal Monument.</p>
-    </div>
+    <!-- Header -->
+    <header>
+        <h1>Historical Travel Destinations</h1>
+        <p>Explore the rich cultural and historical heritage of the Philippines.</p>
+    </header>
 
-    <div class="travel-card">
-      <img src="mag.jpeg" alt="Magellan’s Cross">
-      <h2>Magellan’s Cross</h2>
-      <p>Situated in Cebu City, Magellan’s Cross marks the arrival of Christianity in the Philippines. Tourists can view the symbolic wooden cross housed in a small chapel and learn about its significant role in Philippine history.</p>
-    </div>
+    <!-- Travel Cards -->
+    <section class="travel-grid">
+        <div class="travel-card">
+            <img src="intra.jpeg" alt="Intramuros, Manila">
+            <h2>   Intramuros, Manila</h2>
+            <p>Intramuros, known as *The Walled City*, is a historic gem in the heart of Manila that offers travelers a unique glimpse into the Philippines’ colonial past. Within its stone walls are centuries-old churches, museums, and landmarks such as Fort Santiago. Visitors can enjoy walking along cobblestone streets, riding a traditional *kalesa*, and tasting local cuisine in charming restaurants. It is an ideal destination for those seeking both cultural discovery and historical adventure.
+            </p>
+        </div>
 
-    <div class="travel-card">
-      <img src="bar.jpeg" alt="Barasoain Church">
-      <h2>Barasoain Church</h2>
-      <p>The cradle of democracy, where the First Philippine Republic was established. Tourists can explore its museum and admire its historical architecture.</p>
-    </div>
+        <div class="travel-card">
+            <img src="vigan.webp" alt="Vigan City">
+            <h2>Vigan City</h2>
+            <p>A UNESCO World Heritage Site, Vigan City is famous for its preserved Spanish colonial architecture, cobblestone streets, and horse-drawn kalesa rides. It offers a nostalgic journey into the Philippines’ past while allowing visitors to shop for local crafts and enjoy authentic Ilocano cuisine.</p>
+        </div>
 
-    <div class="travel-card">
-      <img src="taal.jpeg" alt="Taal Basilica">
-      <h2>Taal Basilica</h2>
-      <p>Located in Batangas, the Minor Basilica of Saint Martin of Tours is the largest Catholic church in Asia. Travelers can admire its grand architecture and panoramic views of Taal Lake.</p>
-    </div>
-    <div class="travel-card"> <img src="banaue.jpeg" alt="Banaue Rice Terraces"> <h2>Banaue Rice Terraces</h2>
-        <p>Known as the "Eighth Wonder of the World," the Banaue Rice Terraces showcase ancient engineering and breathtaking landscapes. Travelers can trek through scenic trails, interact with the Ifugao people, and witness a farming tradition over 2,000 years old.</p>
-     </div> 
-     <div class="travel-card"> 
-        <img src="st.jpg" alt="San Agustin Church ">
-        <h2>San Agustin Church </h2>
-        <p> Located in Intramuros, San Agustin Church is the oldest stone church in the Philippines and a UNESCO World Heritage Site. Visitors can admire its Baroque architecture, intricate interiors, and historic artifacts in its museum.</p>
-    </div> 
-    <div class="travel-card">
-        <img src="st.jpg" alt="Malacañang Palace ">
-        <h2>Malacañang Palace </h2>
-         <p> The official residence of the Philippine president, Malacañang Palace offers guided tours through its museum, showcasing the nation’s political history and heritage.</p>
-    </div>
-    <div class="travel-card"> 
+        <div class="travel-card">
+            <img src="riza.jpg" alt="Rizal Park">
+            <h2>Rizal Park (Luneta)</h2>
+            <p>One of Manila’s most iconic landmarks, Rizal Park is dedicated to national hero Dr. José Rizal. Visitors can stroll through landscaped gardens, see historical monuments, and witness the changing of the guards at the Rizal Monument.</p>
+        </div>
+
+        <div class="travel-card">
+            <img src="mag.jpeg" alt="Magellan’s Cross">
+            <h2>Magellan’s Cross</h2>
+            <p>Situated in Cebu City, Magellan’s Cross marks the arrival of Christianity in the Philippines. Tourists can view the symbolic wooden cross housed in a small chapel and learn about its significant role in Philippine history.</p>
+        </div>
+
+        <div class="travel-card">
+            <img src="bar.jpeg" alt="Barasoain Church">
+            <h2>Barasoain Church</h2>
+            <p> e Republic was established. Tourists can explore its museum and admire its historical architecture.</p>
+        </div>
+
+        <div class="travel-card">
+            <img src="taal.jpeg" alt="Taal Basilica">
+            <h2>Taal Basilica</h2>
+            <p>Located in Batangas, the Minor Basilica of Saint Martin of Tours is the largest Catholic church in Asia. Travelers can admire its grand architecture and panoramic views of Taal Lake.</p>
+        </div>
+        <div class="travel-card">
+            <img src="banaue.jpeg" alt="Banaue Rice Terraces">
+            <h2>Banaue Rice Terraces</h2>
+            <p>Known as the "Eighth Wonder of the World," the Banaue Rice Terraces showcase ancient engineering and breathtaking landscapes. Travelers can trek through scenic trails, interact with the Ifugao people, and witness a farming tradition over 2,000 years old.</p>
+        </div>
+         <div class="travel-card">
+            <img src="st.jpg" alt="San Agustin Church ">
+            <h2>San Agustin Church </h2>
+            <p> Located in Intramuros, San Agustin Church is the oldest stone church in the Philippines and a UNESCO World Heritage Site. Visitors can admire its Baroque architecture, intricate interiors, and historic artifacts in its museum.</p>
+        </div>
+        <div class="travel-card">
+            <img src="st.jpg" alt="Malacañang Palace ">
+            <h2>Malacañang Palace </h2>
+            <p> The official residence of the Philippine president, Malacañang Palace offers guided tours through its museum, showcasing the nation’s political history and heritage.</p>
+        </div>
+        <div class="travel-card">
             <img src="cor.jpeg" alt="Corregidor Island">
             <h2>Corregidor Island </h2>
             <p> A historic island fortress in Manila Bay, Corregidor offers tours of war relics, tunnels, and memorials from World War II. Visitors can enjoy a mix of history, nature, and coastal scenery.</p>
-    </div>
-    <div class="travel-card">
-            <img src="mac.jpeg" alt="Mactan Shrine"> 
+        </div>
+        <div class="travel-card">
+            <img src="mac.jpeg" alt="Mactan Shrine">
             <h2>Mactan Shrine </h2>
-            <p> Situated in Cebu, Mactan Shrine commemorates the Battle of Mactan and the heroism of Lapu-Lapu. Tourists can explore monuments, learn about Cebu’s history, and enjoy nearby beaches.</p> 
-    </div> 
-    <div class="travel-card">
-             <img src="monu.jpeg" alt="EDSA People Power Monument"> 
-             <h2>EDSA People Power Monument</h2>
-              <p> Located along EDSA in Quezon City, this monument honors the 1986 People Power Revolution. Visitors can reflect on the country’s fight for democracy and see symbolic sculptures representing unity.</p>
-    </div>
-    <div class="travel-card"> 
-                <img src="under.jpg" alt="Palawan Tabon Caves">
-                 <h2>Palawan Tabon Caves</h2>
-                 <p> Known as the "Cradle of Philippine Civilization," the Tabon Caves in Palawan are archaeological sites with prehistoric artifacts. Visitors can explore caves, hike nature trails, and learn about early human history.</p>
-    </div>
-    <div class="travel-card"> 
-                    <img src="mt.jpg" alt="Mount Samat National Shrine">
-                    <h2>Mount Samat National Shrine</h2>
-                    <p> Situated in Bataan, this shrine honors Filipino and American soldiers of World War II. Tourists can visit the towering cross, museum, and enjoy panoramic views of the surrounding landscape.</p>
-    </div>
-    <div class="travel-card">
-                    <img src="las.jpg" alt="Las Casas Filipinas de Acuzar"> 
-                    <h2>Las Casas Filipinas de Acuzar</h2>
-                     <p> Located in Bagac, Bataan, Las Casas Filipinas de Acuzar is an open-air museum and heritage resort showcasing restored Spanish-Filipino houses from different parts of the country. Visitors can stroll through cobblestone streets, join guided heritage tours, enjoy traditional Filipino cuisine, and experience the charm of the Philippines’ colonial past.</p>
-     </div> 
-     <div class="travel-card"> 
-                        <img src="ag.jpg" alt="Aguinaldo Shrine">
-                         <h2>Aguinaldo Shrine</h2> 
-                         <p>Located in Kawit, Cavite, the Aguinaldo Shrine is the historic home of General Emilio Aguinaldo, where Philippine independence was proclaimed on June 12, 1898. Travelers can explore its preserved rooms, view artifacts from the revolution, and enjoy guided tours that bring history to life. The site also features a museum and offers a chance to witness the balcony where the Philippine flag was first unfurled.</p> </div> </section>
-  </section>
-  <footer class="historical-footer">
-    <div class="footer-silhouette"></div>
-    <div class="footer-content">
-      <div class="footer-social">
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-youtube"></i></a>
-      </div>
-      <p>info@historicalph.com | +63 912 345 6789</p>
-      <p>TERMS & CONDITIONS | PRIVACY POLICY</p>
-      <p>This Website is for project purposes only | Designed by Ealyn Mutya</p>
-    </div>
-  </footer>
-  <script>
-    let counter = 1;
-    setInterval(() => {
-      document.getElementById('radio' + counter).checked = true;
-      counter++;
-      if(counter > 4) counter = 1;
-    }, 4000); 
-  </script>
+            <p>  Situated in Cebu, Mactan Shrine commemorates the Battle of Mactan and the heroism of Lapu-Lapu. Tourists can explore monuments, learn about Cebu’s history, and enjoy nearby beaches.</p>
+        </div>
+        <div class="travel-card">
+            <img src="monu.jpeg" alt="EDSA People Power Monument">
+            <h2>EDSA People Power Monument</h2>
+            <p> Located along EDSA in Quezon City, this monument honors the 1986 People Power Revolution. Visitors can reflect on the country’s fight for democracy and see symbolic sculptures representing unity.</p>
+        </div>
+        <div class="travel-card">
+            <img src="under.jpg" alt="Palawan Tabon Caves">
+            <h2>Palawan Tabon Caves</h2>
+            <p> Known as the "Cradle of Philippine Civilization," the Tabon Caves in Palawan are archaeological sites with prehistoric artifacts. Visitors can explore caves, hike nature trails, and learn about early human history.</p>
+        </div>
+        <div class="travel-card">
+            <img src="mt.jpg" alt="Mount Samat National Shrine">
+            <h2>Mount Samat National Shrine</h2>
+            <p> Situated in Bataan, this shrine honors Filipino and American soldiers of World War II. Tourists can visit the towering cross, museum, and enjoy panoramic views of the surrounding landscape.</p>
+        </div>
+        <div class="travel-card">
+            <img src="las.jpg" alt="Las Casas Filipinas de Acuzar">
+            <h2>Las Casas Filipinas de Acuzar</h2>
+            <p> Located in Bagac, Bataan, Las Casas Filipinas de Acuzar is an open-air museum and heritage resort showcasing restored Spanish-Filipino houses from different parts of the country. Visitors can stroll through cobblestone streets, join guided heritage tours, enjoy traditional Filipino cuisine, and experience the charm of the Philippines’ colonial past.</p>
+        </div>
+        <div class="travel-card">
+            <img src="ag.jpg" alt="Aguinaldo Shrine">
+            <h2>Aguinaldo Shrine</h2>
+            <p>Located in Kawit, Cavite, the Aguinaldo Shrine is the historic home of General Emilio Aguinaldo, where Philippine independence was proclaimed on June 12, 1898. Travelers can explore its preserved rooms, view artifacts from the revolution, and enjoy guided tours that bring history to life. The site also features a museum and offers a chance to witness the balcony where the Philippine flag was first unfurled.</p>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="historical-footer">
+        <div class="footer-silhouette"></div>
+        <div class="footer-content">
+            <div class="footer-social">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+            </div>
+            <p>info@historicalph.com | +63 912 345 6789</p>
+            <p>TERMS & CONDITIONS | PRIVACY POLICY</p>
+            <p>© 2025 Historical Philippines | Designed by Ealyn Mutya</p>
+        </div>
+    </footer>
 
 </body>
 </html>
